--- a/Registration.html
+++ b/Registration.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/Registration.css">
     <meta charset="UTF-8">
     <title>Registration</title>
 </head>
@@ -15,6 +16,46 @@
             </div>
         </div>
     </div>
-    
+    <div class="container">
+        <div class="Registration-form">
+            <h1>Registration form</h1>
+        </div>
+        <div class="text-input">
+            <label for="form"><h3>full name</h3></label><br>
+            <input type="text" placeholder="full name">
+        </div>
+        <div class="text-input">
+            <label for="form"><h3>email address</h3></label><br>
+            <input type="email" placeholder="email">
+        </div>
+        <div class="text-input">
+            <label for="form"><h3>date of birth</h3></label><br>
+            <input type="date" placeholder="date of birth">
+        </div>
+        <div class="passwords">
+            <div class="text-input">
+                <label for="form"><h3>password</h3></label><br>
+                <input type="password" placeholder="password">
+            </div>
+            <div class="text-input">
+                <label for="form"><h3>confirm password</h3></label><br>
+                <input type="password" placeholder="confirm password">
+            </div>
+        </div>
+        <div class="genders">
+            <h3>Gender:</h3>
+            <div class="gender">
+                <input type="radio" name="gender" id="check-male">
+                <label for="check-male">male</label>
+            </div>
+            <div class="gender">
+                <input type="radio" name="gender" id="check-female">
+                <label for="check-female">female</label>
+            </div>
+            <div class="submit-btn">
+                <button>submit</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
