added the bodyfooter and the css files

--- a/Registration.html
+++ b/Registration.html
@@ -5,19 +5,22 @@
     <link rel="stylesheet" href="css/Registration.css">
     <meta charset="UTF-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <title>Registration</title>
 </head>
 <body>
     <div class="header">
         <div class="links">
-            <a href="index.html" class="logo"><img src="photos/clinic-history-paper-svgrepo-com.svg"></a>
-            <div class="navigation">
-                <a href="#" class="services">Services</a>
-                <a href="#" class="log-in">Login</a>
-            </div>
-        </div>
+          <div class="left-links">
+            <a href="bodyFooter.html" class="logo"><img src="images/clinic2.png"></a>
+          </div>
+          <div class="right-links">
+            <a href="#contact" class="contact-header">Contact us</a>
+            <a href="#serv" class="services-header">Services</a>
+            <a href="#" class="log-in">Login</a>
+          </div>
+        </div>    
     </div>
     <div class="container">
         <div class="Registration-form">
@@ -65,7 +68,6 @@
             <div class="submit-btn">
                 <button>submit</button>
             </div>
-        </div>
     </div>
 </body>
 </html>
