linked the contact us page to the registrations page

--- a/Registration.html
+++ b/Registration.html
@@ -16,7 +16,7 @@
             <a href="bodyFooter.html" class="logo"><img src="images/clinic2.png"></a>
           </div>
           <div class="right-links">
-            <a href="#contact" class="contact-header">Contact us</a>
+            <a href="contact.html" class="contact-header">Contact us</a>
             <a href="#serv" class="services-header">Services</a>
             <a href="#" class="log-in">Login</a>
           </div>
