--- a/dentist-doc1.html
+++ b/dentist-doc1.html
@@ -24,42 +24,46 @@
                 <div class="right-links">
                     <a href="contact.html" class="contact-header">Contact us</a>
                     <a href="#serv" class="services-header">Services</a>
-                    <!-- <a href="#" class="log-in">Login</a> -->
+                    <a href="#" class="log-in">Login</a>
                 </div>
             </div>
         </div>
     </header>
     <!-- Sections -->
-    <section class="doc-card">
+    <section class="main">
         <div class="content">
-            <div class="doc-info">
-                <img src="images/Anonymous Doctor.jpg" alt="">
-                <div class="doc-text">
-                    <p>Dr,</p>
-                    <div class="doc-name">
-                        <h2>Mike, L</h2>
-                        <hr class="horizontal-line">
-                    </div>
-                    <p class="doc-bio">I’m Dr. Mike, with over 16 years of experience in cosmetic and restorative
-                        dentistry. I’m committed to delivering precise, patient-focused care using the latest techniques
-                        and technologies. My goal is to help every patient achieve a healthy, confident smile.</p>
-                        <br>
-                        <div class="social">
-                            <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                            <a href="#"><i class="fa-brands fa-facebook-messenger"></i></i></a>
-                            <a href="#"><i class="fa-brands fa-linkedin"></i></i></a>
-                        </div>
+            <div class="doc-card">
+                <div class="doc-icon">
+                    <i class="fa-solid fa-user-doctor"></i>
                 </div>
+                <div class="doc-text">
+                    <div class="title">
+
+                        <h3>Dr, <span>Mohamed Ali</span></h3>
+                        <h2>Dentist</h2>
+                    </div>
+                    <div class="social-icons">
+                        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="#"><i class="fa-brands fa-facebook-messenger"></i></a>
+                        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="#"><i class="fa-solid fa-map-location-dot"></i></a>
+                    </div>
+                </div>
+                <hr class="hr">
+                <div class="about">
+                    <h2>About <span>Dr, Mohamed</span></h2>
+                </div>
+                <div class="doc-bio">
+                    <p>Dr. Mohamed Ali, 42, is an expert dentist with over 18 years of experience in clinical and
+                        academic dentistry. He holds a DDS, a Master’s in Restorative Dentistry, and a PhD in Oral
+                        and Maxillofacial Sciences. Known for his skill in aesthetic and implant dentistry, he has
+                        transformed thousands of smiles. Dr. Ali also lectures internationally and has published
+                        multiple research papers. His blend of advanced techniques and patient-focused care sets him
+                        apart in the field.</p>
+                </div>
+                <hr class="hr2">
             </div>
         </div>
-    </section>
-    <section class="doc-main">
-        <div class="box-info">
-            
-        </div>
-    </section>
-    <section class="nav">
-        
     </section>
 </body>
 
