--- a/dentist-doc1.html
+++ b/dentist-doc1.html
@@ -31,8 +31,8 @@
     </header>
     <!-- Sections -->
     <section class="main">
-        <div class="content">
-            <div class="doc-card">
+        <div class="container">
+            <div class="blue-background">
                 <div class="doc-icon">
                     <i class="fa-solid fa-user-doctor"></i>
                 </div>
@@ -62,6 +62,36 @@
                         apart in the field.</p>
                 </div>
                 <hr class="hr2">
+                <div class="content">
+                    <div class="doc-card">
+                        <div class="doc-card-icon">
+                            <i class="fa-solid fa-clock"></i>
+                        </div>
+                        <div class="doc-card-info">
+                            <h3>Working Hours</h3>
+                            <p>Monday - Tuesday - Thursday</p>
+                            <p>From 2:00 PM To 7:00 PM</p>
+                        </div>
+                    </div>
+                    <div class="doc-card">
+                        <div class="doc-card-icon">
+                            <i class="fa-solid fa-tooth"></i>
+                        </div>
+                        <div class="doc-card-info">
+                            <h3 class="clinic-name">HealU Clinic</h3>
+                            <a class="book-btn" href="#">Book Now</a>
+                        </div>
+                    </div>
+                    <div class="doc-card">
+                        <div class="doc-card-icon">
+                            <i class="fa-solid fa-clipboard-list"></i>
+                        </div>
+                        <div class="doc-card-info">
+                            <h3>Our Services</h3>
+                            <p>Whitening, Braces, Dental Implants, Root Canal, Cosmetic Dentistry, Cleaning.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
