updated fonts dentist doc-1

--- a/dentist-doc1.html
+++ b/dentist-doc1.html
@@ -51,7 +51,7 @@
                 </div>
                 <hr class="hr">
                 <div class="about">
-                    <h2>About <span>Dr, Mohamed</span></h2>
+                    <h2>About <span class="doc-name">Dr, Mohamed</span></h2>
                 </div>
                 <div class="doc-bio">
                     <p>Dr. Mohamed Ali, 42, is an expert dentist with over 18 years of experience in clinical and
