Added reviews section in dentist doc-1

--- a/dentist-doc1.html
+++ b/dentist-doc1.html
@@ -29,8 +29,8 @@
             </div>
         </div>
     </header>
-    <!-- Sections -->
-    <section class="main">
+    <!-- Doctrot Profile  -->
+    <section class="main"> 
         <div class="container">
             <div class="blue-background">
                 <div class="doc-icon">
@@ -91,6 +91,69 @@
                             <a class="book-btn" href="#">Book Now</a>
                         </div>
                     </div>
+                </div>
+                <hr class="hr2">
+                <div class="reviews-section"></div>
+                <div class="review-title">
+                    <h2>Reviews</h2>
+                </div>
+                <div class="review-box">
+                    <div class="comment-box">
+                        <div class="comment-section">
+                            <div class="comment">
+                                <h2>Ahmed M. </h2>
+                                <p>"The best doctor ever. Thank You!"</p>
+                            </div>
+                            <div class="stars">
+                                <img src="images/5-stars.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="comment-box">
+                        <div class="comment-section">
+                            <div class="comment">
+                                <h2>Sara A. </h2>
+                                <p>"Absolutely amazing experience. Super kind and professional!"</p>
+                            </div>
+                            <div class="stars">
+                                <img src="images/5-stars.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="comment-box">
+                        <div class="comment-section">
+                            <div class="comment">
+                                <h2>Youssef S. </h2>
+                                <p>"Felt rushed, not happy."</p>
+                            </div>
+                            <div class="stars">
+                                <img src="images/1-star.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="comment-box">
+                        <div class="comment-section">
+                            <div class="comment">
+                                <h2>Mostafa K. </h2>
+                                <p>"Very clear and helpful!"</p>
+                            </div>
+                            <div class="stars">
+                                <img src="images/5-stars.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="comment-box">
+                        <div class="comment-section">
+                            <div class="comment">
+                                <h2>Hany P. </h2>
+                                <p>"Okay, but could improve."</p>
+                            </div>
+                            <div class="stars">
+                                <img src="images/3-stars.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
