Add comments, improve readability

--- a/dentist-doc1.html
+++ b/dentist-doc1.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<html>
 
 <head>
     <meta charset="UTF-8">
@@ -14,7 +13,7 @@
 </head>
 
 <body>
-    <!-- Header Section -->
+    <!-- header -->
     <header>
         <div class="header">
             <div class="links">
@@ -29,135 +28,158 @@
             </div>
         </div>
     </header>
-    <!-- Doctrot Profile  -->
-    <section class="main"> 
-        <div class="container">
-            <div class="blue-background">
-                <div class="doc-icon">
-                    <i class="fa-solid fa-user-doctor"></i>
-                </div>
-                <div class="doc-text">
-                    <div class="title">
 
-                        <h3>Dr, <span>Mohamed Ali</span></h3>
-                        <h2>Dentist</h2>
-                    </div>
-                    <div class="social-icons">
-                        <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                        <a href="#"><i class="fa-brands fa-facebook-messenger"></i></a>
-                        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                        <a href="#"><i class="fa-solid fa-map-location-dot"></i></a>
-                    </div>
-                </div>
-                <hr class="hr">
-                <div class="about">
-                    <h2>About <span class="doc-name">Dr, Mohamed</span></h2>
-                </div>
-                <div class="doc-bio">
-                    <p>Dr. Mohamed Ali, 42, is an expert dentist with over 18 years of experience in clinical and
-                        academic dentistry. He holds a DDS, a Master’s in Restorative Dentistry, and a PhD in Oral
-                        and Maxillofacial Sciences. Known for his skill in aesthetic and implant dentistry, he has
-                        transformed thousands of smiles. Dr. Ali also lectures internationally and has published
-                        multiple research papers. His blend of advanced techniques and patient-focused care sets him
-                        apart in the field.</p>
-                </div>
-                <hr class="hr2">
-                <div class="content">
-                    <div class="doc-card">
-                        <div class="doc-card-icon">
-                            <i class="fa-solid fa-clipboard-list"></i>
+    <!-- the main profile -->
+    <main>
+        <section class="main">
+            <div class="container">
+                <div class="blue-background">
+                    <!-- The Profile Header -->
+                    <header class="doctor-profile-header">
+                        <div class="doc-icon">
+                            <i class="fa-solid fa-user-doctor"></i>
                         </div>
-                        <div class="doc-card-info">
-                            <h3>Our Services</h3>
-                            <p>Whitening, Braces, Dental Implants, Root Canal, Cosmetic Dentistry, Cleaning.</p>
-                        </div>
-                    </div>
-                    <div class="doc-card">
-                        <div class="doc-card-icon">
-                            <i class="fa-solid fa-clock"></i>
-                        </div>
-                        <div class="doc-card-info">
-                            <h3>Working Hours</h3>
-                            <p>Monday - Tuesday - Thursday</p>
-                            <p>From 2:00 PM To 7:00 PM</p>
-                        </div>
-                    </div>
-                    <div class="doc-card">
-                        <div class="doc-card-icon">
-                            <i class="fa-solid fa-tooth"></i>
-                        </div>
-                        <div class="doc-card-info">
-                            <h3 class="clinic-name">HealU Clinic</h3>
-                            <a class="book-btn" href="#">Book Now</a>
-                        </div>
-                    </div>
-                </div>
-                <hr class="hr2">
-                <div class="reviews-section"></div>
-                <div class="review-title">
-                    <h2>Reviews</h2>
-                </div>
-                <div class="review-box">
-                    <div class="comment-box">
-                        <div class="comment-section">
-                            <div class="comment">
-                                <h2>Ahmed M. </h2>
-                                <p>"The best doctor ever. Thank You!"</p>
+                        <div class="doc-text">
+                            <div class="title">
+                                <h3>Dr, <span>Mohamed Ali</span></h3>
+                                <h2>Dentist</h2>
                             </div>
-                            <div class="stars">
-                                <img src="images/5-stars.png" alt="">
+                            <div class="social-icons">
+                                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                                <a href="#"><i class="fa-brands fa-facebook-messenger"></i></a>
+                                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                                <a href="#"><i class="fa-solid fa-map-location-dot"></i></a>
                             </div>
                         </div>
-                    </div>
-                    <div class="comment-box">
-                        <div class="comment-section">
-                            <div class="comment">
-                                <h2>Sara A. </h2>
-                                <p>"Absolutely amazing experience. Super kind and professional!"</p>
-                            </div>
-                            <div class="stars">
-                                <img src="images/5-stars.png" alt="">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="comment-box">
-                        <div class="comment-section">
-                            <div class="comment">
-                                <h2>Youssef S. </h2>
-                                <p>"Felt rushed, not happy."</p>
-                            </div>
-                            <div class="stars">
-                                <img src="images/1-star.png" alt="">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="comment-box">
-                        <div class="comment-section">
-                            <div class="comment">
-                                <h2>Mostafa K. </h2>
-                                <p>"Very clear and helpful!"</p>
-                            </div>
-                            <div class="stars">
-                                <img src="images/5-stars.png" alt="">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="comment-box">
-                        <div class="comment-section">
-                            <div class="comment">
-                                <h2>Hany P. </h2>
-                                <p>"Okay, but could improve."</p>
-                            </div>
-                            <div class="stars">
-                                <img src="images/3-stars.png" alt="">
-                            </div>
-                        </div>
-                    </div>
+                    </header>
 
+                    <hr class="hr">
+
+                    <!-- About section -->
+                    <section class="about-doctor">
+                        <div class="about">
+                            <h2>About <span class="doc-name">Dr, Mohamed</span></h2>
+                        </div>
+                        <div class="doc-bio">
+                            <p>Dr. Mohamed Ali, 42, is an expert dentist with over 18 years of experience in clinical
+                                and
+                                academic dentistry. He holds a DDS, a Master’s in Restorative Dentistry, and a PhD in
+                                Oral
+                                and Maxillofacial Sciences. Known for his skill in aesthetic and implant dentistry, he
+                                has
+                                transformed thousands of smiles. Dr. Ali also lectures internationally and has published
+                                multiple research papers. His blend of advanced techniques and patient-focused care sets
+                                him
+                                apart in the field.</p>
+                        </div>
+                    </section>
+
+                    <hr class="hr2">
+
+                    <!-- services cards -->
+                    <section class="doctor-info">
+                        <div class="content">
+                            <div class="doc-card">
+                                <div class="doc-card-icon">
+                                    <i class="fa-solid fa-clipboard-list"></i>
+                                </div>
+                                <div class="doc-card-info">
+                                    <h3>Our Services</h3>
+                                    <p>Whitening, Braces, Dental Implants, Root Canal, Cosmetic Dentistry, Cleaning.</p>
+                                </div>
+                            </div>
+                            <div class="doc-card">
+                                <div class="doc-card-icon">
+                                    <i class="fa-solid fa-clock"></i>
+                                </div>
+                                <div class="doc-card-info">
+                                    <h3>Working Hours</h3>
+                                    <p>Monday - Tuesday - Thursday</p>
+                                    <p>From 2:00 PM To 7:00 PM</p>
+                                </div>
+                            </div>
+                            <div class="doc-card">
+                                <div class="doc-card-icon">
+                                    <i class="fa-solid fa-tooth"></i>
+                                </div>
+                                <div class="doc-card-info">
+                                    <h3 class="clinic-name">HealU Clinic</h3>
+                                    <a class="book-btn" href="#">Book Now</a>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+
+                    <hr class="hr2">
+
+                    <!-- Reviews section -->
+                    <section class="reviews">
+                        <div class="reviews-section"></div>
+                        <div class="review-title">
+                            <h2>Reviews</h2>
+                        </div>
+                        <div class="review-box">
+                            <div class="comment-box">
+                                <div class="comment-section">
+                                    <div class="comment">
+                                        <h2>Ahmed M.</h2>
+                                        <p>"The best doctor ever. Thank You!"</p>
+                                    </div>
+                                    <div class="stars">
+                                        <img src="images/5-stars.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="comment-box">
+                                <div class="comment-section">
+                                    <div class="comment">
+                                        <h2>Sara A.</h2>
+                                        <p>"Absolutely amazing experience. Super kind and professional!"</p>
+                                    </div>
+                                    <div class="stars">
+                                        <img src="images/5-stars.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="comment-box">
+                                <div class="comment-section">
+                                    <div class="comment">
+                                        <h2>Youssef S.</h2>
+                                        <p>"Felt rushed, not happy."</p>
+                                    </div>
+                                    <div class="stars">
+                                        <img src="images/1-star.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="comment-box">
+                                <div class="comment-section">
+                                    <div class="comment">
+                                        <h2>Mostafa K.</h2>
+                                        <p>"Very clear and helpful!"</p>
+                                    </div>
+                                    <div class="stars">
+                                        <img src="images/5-stars.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="comment-box">
+                                <div class="comment-section">
+                                    <div class="comment">
+                                        <h2>Hany P.</h2>
+                                        <p>"Okay, but could improve."</p>
+                                    </div>
+                                    <div class="stars">
+                                        <img src="images/3-stars.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </main>
 </body>
 
 </html>
