--- a/dentist-doc1.html
+++ b/dentist-doc1.html
@@ -145,10 +145,10 @@
                                 <div class="comment-section">
                                     <div class="comment">
                                         <h2>Youssef S.</h2>
-                                        <p>"Felt rushed, not happy."</p>
+                                        <p>"Good experience overall!"</p>
                                     </div>
                                     <div class="stars">
-                                        <img src="images/1-star.png" alt="">
+                                        <img src="images/4-stars.png" alt="">
                                     </div>
                                 </div>
                             </div>
