--- a/bodyFooter.html
+++ b/bodyFooter.html
@@ -20,11 +20,20 @@
         <a href="contact.html" class="contact-header">Contact us</a>
         <a href="#serv" class="services-header">Services</a>
         <a href="#" class="log-in">Login</a>
+  
+        <label class="switch">
+          <input type="checkbox">
+          <span class="slider">
+            <span class="icon sun">☀️</span>
+            <span class="icon moon">🌙</span>
+          </span>
+        </label>
       </div>
     </div>    
   </div>
-
-
+  
+  
+  
   <!-- Video Section -->
   <div class="intro-video">
     <div class="video-container">
