--- a/dentist-doc1.html
+++ b/dentist-doc1.html
@@ -14,20 +14,25 @@
 
 <body>
     <!-- header -->
-    <header>
-        <div class="header">
-            <div class="links">
-                <div class="left-links">
-                    <a href="bodyFooter.html" class="logo"><img src="images/clinic2.png"></a>
-                </div>
-                <div class="right-links">
-                    <a href="contact.html" class="contact-header">Contact us</a>
-                    <a href="#serv" class="services-header">Services</a>
-                    <a href="#" class="log-in">Login</a>
-                </div>
-            </div>
-        </div>
-    </header>
+    <div class="header">
+        <div class="links">
+          <div class="left-links">
+            <a href="bodyFooter.html" class="logo"><img src="images/clinic2.png"></a>
+          </div>
+          <div class="right-links">
+            <a href="contact.html" class="contact-header">Contact us</a>
+            <a href="login.html" class="log-in">Login</a>
+      
+            <label class="switch">
+              <input type="checkbox">
+              <span class="slider">
+                <span class="icon sun">☀️</span>
+                <span class="icon moon">🌙</span>
+              </span>
+            </label>
+          </div>
+        </div>    
+      </div>
 
     <!-- the main profile -->
     <main>
