--- a/Registration.html
+++ b/Registration.html
@@ -28,7 +28,7 @@
         </div>
         <div class="text-input">
             <label for="full name"><h3>full name</h3></label><br>
-            <input type="text" placeholder="full name" id="full name">
+            <input required type="text" placeholder="full name" id="full name">
         </div>
         <div class="text-input">
             <label for="email"><h3>email address</h3></label><br>
