finished the js for the register form

--- a/Registration.html
+++ b/Registration.html
@@ -65,9 +65,10 @@
                 </div>
             </div>
         </div>
-            <div class="submit-btn">
+            <div class="submit-btn" id="submit-btn">
                 <button>submit</button>
             </div>
     </div>
+    <script src="js/registration.js"></script>
 </body>
 </html>
