updated the registration form

--- a/Registration.html
+++ b/Registration.html
@@ -17,57 +17,65 @@
           </div>
           <div class="right-links">
             <a href="contact.html" class="contact-header">Contact us</a>
-            <a href="#serv" class="services-header">Services</a>
-            <a href="#" class="log-in">Login</a>
+            <a href="login.html" class="log-in">Login</a>
+            <label class="switch">
+              <input type="checkbox">
+              <span class="slider">
+                <span class="icon sun">☀️</span>
+                <span class="icon moon">🌙</span>
+              </span>
+            </label>
           </div>
         </div>    
-    </div>
+      </div>
     <div class="container">
-        <div class="Registration-form">
-            <h1>Registration form</h1>
-        </div>
-        <div class="text-input">
-            <label for="full name"><h3>full name</h3></label><br>
-            <input required type="text" placeholder="full name" id="full name">
-        </div>
-        <div class="text-input">
-            <label for="email"><h3>email address</h3></label><br>
-            <input type="email" placeholder="email" id="email">
-        </div>
-        <div class="text-input">
-            <label for="dob"><h3>date of birth</h3></label><br>
-            <input type="date" placeholder="date of birth" id="dob">
-        </div>
-        <div class="passwords">
-            <div class="text-input password-wrapper">
-                <label for="password"><h3>Password</h3></label><br>
-                <div class="password-field">
-                    <input type="password" placeholder="Password" id="password">
+        <form action="your-action-url" method="post">
+            <div class="Registration-form">
+                <h1>Registration form</h1>
+            </div>
+            <div class="text-input">
+                <label for="full name"><h3>full name</h3></label><br>
+                <input required type="text" placeholder="full name" id="full name" name="full_name">
+            </div>
+            <div class="text-input">
+                <label for="email"><h3>email address</h3></label><br>
+                <input required type="email" placeholder="email" id="email" name="email">
+            </div>
+            <div class="text-input">
+                <label for="dob"><h3>date of birth</h3></label><br>
+                <input required type="date" placeholder="date of birth" id="dob" name="dob">
+            </div>
+            <div class="passwords">
+                <div class="text-input password-wrapper">
+                    <label for="password"><h3>Password</h3></label><br>
+                    <div class="password-field">
+                        <input required type="password" placeholder="Password" id="password" name="password">
+                    </div>
+                </div>
+                <div class="text-input password-wrapper">
+                    <label for="conpassword"><h3>Confirm Password</h3></label><br>
+                    <div class="password-field">
+                        <input required type="password" placeholder="Confirm Password" id="conpassword" name="conpassword">
+                    </div>
                 </div>
             </div>
-            <div class="text-input password-wrapper">
-                <label for="conpassword"><h3>Confirm Password</h3></label><br>
-                <div class="password-field">
-                    <input type="password" placeholder="Confirm Password" id="conpassword">
+            <div class="genders">
+                <h3>Gender:</h3>
+                <div class="gender-options">
+                    <div class="gender">
+                        <input required type="radio" name="gender" id="check-male" value="male">
+                        <label for="check-male">Male</label>
+                    </div>
+                    <div class="gender">
+                        <input required type="radio" name="gender" id="check-female" value="female">
+                        <label for="check-female">Female</label>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="genders">
-            <h3>Gender:</h3>
-            <div class="gender-options">
-                <div class="gender">
-                    <input type="radio" name="gender" id="check-male">
-                    <label for="check-male">Male</label>
-                </div>
-                <div class="gender">
-                    <input type="radio" name="gender" id="check-female">
-                    <label for="check-female">Female</label>
-                </div>
-            </div>
-        </div>
             <div class="submit-btn" id="submit-btn">
-                <button>submit</button>
+                <button type="submit">submit</button>
             </div>
+        </form>
     </div>
     <script src="js/registration.js"></script>
 </body>
