--- a/Registration.html
+++ b/Registration.html
@@ -29,7 +29,7 @@
         </div>    
       </div>
     <div class="container">
-        <form action="your-action-url" method="post">
+        <form>
             <div class="Registration-form">
                 <h1>Registration form</h1>
             </div>
