--- a/Registration.html
+++ b/Registration.html
@@ -12,38 +12,38 @@
 <body>
     <div class="header">
         <div class="links">
-          <div class="left-links">
-            <a href="bodyFooter.html" class="logo"><img src="images/clinic2.png"></a>
-          </div>
-          <div class="right-links">
-            <a href="contact.html" class="contact-header">Contact us</a>
-            <a href="login.html" class="log-in">Login</a>
-            <label class="switch">
-              <input type="checkbox">
-              <span class="slider">
-                <span class="icon sun">☀️</span>
-                <span class="icon moon">🌙</span>
-              </span>
-            </label>
-          </div>
+            <div class="left-links">
+                <a href="bodyFooter.html" class="logo"><img src="images/clinic2.png"></a>
+            </div>
+            <div class="right-links">
+                <a href="contact.html" class="contact-header">Contact us</a>
+                <a href="login.html" class="log-in">Login</a>
+                <label class="switch">
+                    <input type="checkbox">
+                    <span class="slider">
+                        <span class="icon sun">☀️</span>
+                        <span class="icon moon">🌙</span>
+                    </span>
+                </label>
+            </div>
         </div>    
-      </div>
+    </div>
     <div class="container">
         <form id="registrationForm">
             <div class="Registration-form">
                 <h1>Registration form</h1>
             </div>
             <div class="text-input">
-                <label for="full name"><h3>full name</h3></label><br>
-                <input required type="text" placeholder="full name" id="full name" name="full_name">
+                <label for="full name"><h3>Full Name</h3></label><br>
+                <input required type="text" placeholder="Full Name" id="full_name" name="full_name">
             </div>
             <div class="text-input">
-                <label for="email"><h3>email address</h3></label><br>
-                <input required type="email" placeholder="email" id="email" name="email">
+                <label for="email"><h3>Email Address</h3></label><br>
+                <input required type="email" placeholder="Email" id="email" name="email">
             </div>
             <div class="text-input">
-                <label for="dob"><h3>date of birth</h3></label><br>
-                <input required type="date" placeholder="date of birth" id="dob" name="dob">
+                <label for="dob"><h3>Date of Birth</h3></label><br>
+                <input required type="date" placeholder="Date of Birth" id="dob" name="dob">
             </div>
             <div class="passwords">
                 <div class="text-input password-wrapper">
@@ -73,16 +73,26 @@
                 </div>
             </div>
             <div class="submit-btn" id="submit-btn">
-                <button type="submit">Submit</button>
+                <button type="submit" onclick="whichEvent(event)">Submit</button>
             </div>
         </form>
     </div>
 
-    <!-- Popup message -->
+    <!-- Popup for successful registration -->
     <div class="popup" id="popup">
         <div class="popup-content">
             <h3>Registration Successful!</h3>
             <p>Your registration was completed successfully.</p>
+            <p>go back to the log in page</p>
+            <button onclick="closePopup()">Close</button>
+        </div>
+    </div>
+
+    <!-- Popup for password mismatch -->
+    <div class="popup" id="matching-passwords">
+        <div class="popup-content">
+            <h3>Registration Failed</h3>
+            <p>Passwords do not match.</p>
             <button onclick="closePopup()">Close</button>
         </div>
     </div>
