added the header for both sara and mora and fixed bug for mora

--- a/contact.html
+++ b/contact.html
@@ -10,12 +10,29 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-
-
-
+    <link rel="stylesheet" href="css/header.css">
 </head>
 
 <body>
+    <div class="header">
+        <div class="links">
+          <div class="left-links">
+            <a href="bodyFooter.html" class="logo"><img src="images/clinic2.png"></a>
+          </div>
+          <div class="right-links">
+            <a href="contact.html" class="contact-header">Contact us</a>
+            <a href="login.html" class="log-in">Login</a>
+      
+            <label class="switch">
+              <input type="checkbox">
+              <span class="slider">
+                <span class="icon sun">☀️</span>
+                <span class="icon moon">🌙</span>
+              </span>
+            </label>
+          </div>
+        </div>    
+      </div>
     <!-- HEALU CONTACT TITLE -->
     <div class="contact-container">
         <h1>
