--- a/login.html
+++ b/login.html
@@ -4,10 +4,30 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login Page</title>
-  <link rel="stylesheet" href="login.css" />
-  
+  <link rel="stylesheet" href="css/login.css" />
+  <link rel="stylesheet" href="css/header.css">
+
 </head>
 <body>
+  <div class="header">
+    <div class="links">
+      <div class="left-links">
+        <a href="bodyFooter.html" class="logo"><img src="images/clinic2.png"></a>
+      </div>
+      <div class="right-links">
+        <a href="contact.html" class="contact-header">Contact us</a>
+        <a href="login.html" class="log-in">Login</a>
+  
+        <label class="switch">
+          <input type="checkbox">
+          <span class="slider">
+            <span class="icon sun">☀️</span>
+            <span class="icon moon">🌙</span>
+          </span>
+        </label>
+      </div>
+    </div>    
+  </div>
   <div class="login-container">
     <h1>Login</h1>
     <form>
@@ -19,7 +39,7 @@
       </form>
       
     <p class="register-link">
-      No account? <a href="reg.html">Register here</a>
+      No account? <a href="Registration.html">Register here</a>
     </p>
   </div>
 </body>
